<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="430dp"
    android:layout_height="415dp"
    android:background="@color/lightgray"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvCalculator"
        android:layout_width="391dp"
        android:layout_height="79dp"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:text="0"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMC"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/MC"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculator" />


    <Button
        android:id="@+id/btnMR"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/MR"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMC"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculator" />

    <Button
        android:id="@+id/btnMS"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/MS"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMR"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculator" />

    <Button
        android:id="@+id/btnMplus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Mplus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMS"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculator" />

    <Button
        android:id="@+id/btnMminus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Mminus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMplus"
        app:layout_constraintTop_toBottomOf="@+id/tvCalculator" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Del"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMC" />

    <Button
        android:id="@+id/btnCE"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/CE"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnDel"
        app:layout_constraintTop_toBottomOf="@+id/btnMR" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/C"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnCE"
        app:layout_constraintTop_toBottomOf="@+id/btnMS" />

    <Button
        android:id="@+id/btnPlusMinus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/PlusMinus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnMplus" />

    <Button
        android:id="@+id/btnSqrt"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Sqrt"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnPlusMinus"
        app:layout_constraintTop_toBottomOf="@+id/btnMminus" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Seven"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDel" />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Eight"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnSeven"
        app:layout_constraintTop_toBottomOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Nine"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnEight"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Division"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnNine"
        app:layout_constraintTop_toBottomOf="@+id/btnPlusMinus" />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Percent"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnDivision"
        app:layout_constraintTop_toBottomOf="@+id/btnSqrt" />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Four"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSeven" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Five"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnFour"
        app:layout_constraintTop_toBottomOf="@+id/btnEight" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Six"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnFive"
        app:layout_constraintTop_toBottomOf="@+id/btnNine" />

    <Button
        android:id="@+id/btnMultiplication"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Multiplication"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnSix"
        app:layout_constraintTop_toBottomOf="@+id/btnDivision" />

    <Button
        android:id="@+id/btnOneOverX"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/OneOverX"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplication"
        app:layout_constraintTop_toBottomOf="@+id/btnPercent" />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/One"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFour" />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Two"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnOne"
        app:layout_constraintTop_toBottomOf="@+id/btnFive" />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Three"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnTwo"
        app:layout_constraintTop_toBottomOf="@+id/btnSix" />

    <Button
        android:id="@+id/btnMinus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:text="@string/Minus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingVertical="10dp"
        android:layout_margin="4dp"
        app:layout_constraintStart_toEndOf="@+id/btnThree"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplication" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Zero"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOne" />

    <Button
        android:id="@+id/btnDot"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Dot"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnZero"
        app:layout_constraintTop_toBottomOf="@+id/btnThree" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_margin="4dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Plus"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnDot"
        app:layout_constraintTop_toBottomOf="@+id/btnMinus" />

    <Button
        android:id="@+id/btnEqual"
        android:layout_width="82dp"
        android:layout_height="105dp"
        android:layout_margin="4dp"
        android:background="@drawable/btndesign"
        android:backgroundTint="@color/lightgray"
        android:gravity="center"
        android:paddingVertical="10dp"
        android:text="@string/Equal"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnMinus"
        app:layout_constraintTop_toBottomOf="@+id/btnOneOverX" />

</androidx.constraintlayout.widget.ConstraintLayout>